testsuite/tests/indexed-types/should_fail/T21896.stderr

T21896.hs:8:5: error: [GHC-05175]
    • Type family equation right-hand sides overlap; this violates
      the family's injectivity annotation:
        forall {k} {r :: k}. F Foo r = r -- Defined at T21896.hs:8:5
        forall {k} {r :: k}. F Bar r = r -- Defined at T21896.hs:9:5
    • In the equations for closed type family ‘F’
      In the type family declaration for ‘F’

T21896.hs:8:5: error: [GHC-05175]
    • Type family equation violates the family's injectivity annotation.
      RHS of injective type family equation is a bare type variable
      but these LHS type and kind patterns are not bare variables: ‘Foo’
        forall {k} {r :: k}. F Foo r = r -- Defined at T21896.hs:8:5
    • In the equations for closed type family ‘F’
      In the type family declaration for ‘F’

T21896.hs:9:5: error: [GHC-05175]
    • Type family equation violates the family's injectivity annotation.
      RHS of injective type family equation is a bare type variable
      but these LHS type and kind patterns are not bare variables: ‘Bar’
        forall {k} {r :: k}. F Bar r = r -- Defined at T21896.hs:9:5
    • In the equations for closed type family ‘F’
      In the type family declaration for ‘F’
